tests/golden/defaults/capi-provider-cloudscale/capi-provider-cloudscale/10_kustomize/rbac.authorization.k8s.io_v1_clusterrole_capcs-metrics-auth-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: infrastructure-cloudscale-ch-cloudscale
  name: capcs-metrics-auth-role
rules:
- apiGroups:
  - authentication.k8s.io
  resources:
  - tokenreviews
  verbs:
  - create
- apiGroups:
  - authorization.k8s.io
  resources:
  - subjectaccessreviews
  verbs:
  - create
