tests/golden/defaults/capi-provider-cloudscale/capi-provider-cloudscale/10_kustomize/rbac.authorization.k8s.io_v1_clusterrole_capcs-metrics-reader.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: infrastructure-cloudscale-ch-cloudscale
  name: capcs-metrics-reader
rules:
- nonResourceURLs:
  - /metrics
  verbs:
  - get
