tests/golden/defaults/capi-provider-cloudscale/capi-provider-cloudscale/10_kustomize/rbac.authorization.k8s.io_v1_clusterrolebinding_capcs-metrics-auth-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    cluster.x-k8s.io/provider: infrastructure-cloudscale-ch-cloudscale
  name: capcs-metrics-auth-rolebinding
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: capcs-metrics-auth-role
subjects:
- kind: ServiceAccount
  name: capcs-controller-manager
  namespace: syn-cluster-api
