tests/golden/defaults/capi-provider-cloudscale/capi-provider-cloudscale/10_kustomize/rbac.authorization.k8s.io_v1_rolebinding_capcs-leader-election-rolebinding.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: cluster-api-provider-cloudscale
    cluster.x-k8s.io/provider: infrastructure-cloudscale-ch-cloudscale
  name: capcs-leader-election-rolebinding
  namespace: syn-cluster-api
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: Role
  name: capcs-leader-election-role
subjects:
- kind: ServiceAccount
  name: capcs-controller-manager
  namespace: syn-cluster-api
