tests/golden/defaults/capi-provider-cloudscale/capi-provider-cloudscale/10_kustomize/v1_service_capcs-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: cluster-api-provider-cloudscale
    cluster.x-k8s.io/provider: infrastructure-cloudscale-ch-cloudscale
    control-plane: controller-manager
  name: capcs-controller-manager-metrics-service
  namespace: syn-cluster-api
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app.kubernetes.io/name: cluster-api-provider-cloudscale
    cluster.x-k8s.io/provider: infrastructure-cloudscale-ch-cloudscale
    control-plane: controller-manager
